added background round shape image

--- a/404.html
+++ b/404.html
@@ -2,122 +2,122 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zakirsoft</title>
-    <link rel="stylesheet" href="assets/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>zakirsoft</title>
+  <link rel="stylesheet" href="assets/css/all.min.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/magnific-popup.css">
+  <link rel="stylesheet" href="assets/css/slick.css">
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
-    <!-- header section start -->
-    <header>
-        <div class="container">
-          <nav class="head_content">
-            <div class="logo">
-              <a href="index.html"> Zakir <span>Soft</span> </a>
-            </div>
-            <div class="menu">
-              <ul class="m_bar">
-                <li></li>
-                <li></li>
-              </ul>
-            </div>
-          </nav>
+  <!-- header section start -->
+  <header>
+    <div class="container">
+      <nav class="head_content">
+        <div class="logo">
+          <a href="index.html"> Zakir <span>Soft</span> </a>
         </div>
-      </header>
-    <!-- Menus -->
-    <!-- Menus -->
-    <div class="fullscreen-menu">
-        <div class="menu-body">
-            <div class="container">
-              <div class="menu-container">
-                  <div class="menu-close">
-                    <ul class="close-bar">
-                      <li></li>
-                      <li></li>
-                    </ul>
-                  </div>
-                  <div class="main-menu">
-                    <ul>
-                      <li> <a href="index.html"> <span>01</span> Home </a> </li>
-                      <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
-                      <li> <a href="work.html"> <span>03</span> Work </a> </li>
-                      <li> <a href="career.html"> <span>04</span> Career </a> </li>
-                      <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
-                    </ul>
-                  </div>
-                </div>
-            </div>
+        <div class="menu">
+          <ul class="m_bar">
+            <li></li>
+            <li></li>
+          </ul>
         </div>
-        <div class="menu-footer">
-          <div class="container">
-            <ul class="footer-social">
-              <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-github"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-facebook-f"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-linkedin-in"></i> </a></li>
+      </nav>
+    </div>
+  </header>
+  <!-- Menus -->
+  <!-- Menus -->
+  <div class="fullscreen-menu">
+    <div class="menu-body">
+      <div class="container">
+        <div class="menu-container">
+          <div class="menu-close">
+            <ul class="close-bar">
+              <li></li>
+              <li></li>
             </ul>
-            <div class="copyright-text">
-              <p> &copy; 2020 - Zakirsoft </h5>
+          </div>
+          <div class="main-menu">
+            <ul>
+              <li> <a href="index.html"> <span>01</span> Home </a> </li>
+              <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
+              <li> <a href="work.html"> <span>03</span> Work </a> </li>
+              <li> <a href="career.html"> <span>04</span> Career </a> </li>
+              <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="menu-footer">
+      <div class="container">
+        <ul class="footer-social">
+          <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-github"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-facebook-f"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-linkedin-in"></i> </a></li>
+        </ul>
+        <div class="copyright-text">
+          <p> &copy; 2020 - Zakirsoft </h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- header section end -->
+
+  <!-- 404 section start -->
+  <section id="error_area" class="none text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="error_wrapper">
+            <div class="error_img">
+              <img src="assets/images/404.svg" alt="404 images">
+            </div>
+            <h2>Oops, The page you are looking is not found</h2>
+            <div class="404_button">
+              <a class="btn" href="index.html">Back to home</a>
+            </div>
+          </div>
+          <div class="bottom">
+            <div class="container">
+              <ul class="social_links">
+                <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                <li><a href="#"><i class="fab fa-github"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+              </ul>
             </div>
           </div>
         </div>
-    </div>
-    <!-- header section end -->
-
-    <!-- 404 section start -->
-    <section id="error_area" class="none text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="error_wrapper">
-                        <div class="404_img">
-                            <img src="assets/images/404.svg" alt="404 images">
-                        </div>
-                            <h2>Oops, The page you are looking is not found</h2>
-                        <div class="404_button">
-                            <a class="btn" href="#">Back to home</a>
-                        </div>
-                    </div>
-                    <div class="bottom">
-                        <div class="container">
-                            <ul class="social_links">
-                                <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                                <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="copyright_text">
-                        <p>&#169; 2020 - Zakirsoft</p>
-                    </div>
-                </div>
-            </div>
+        <div class="col-12">
+          <div class="copyright_text">
+            <p>&#169; 2020 - Zakirsoft</p>
+          </div>
         </div>
-    </section>
-    <!-- 404 section end -->
+      </div>
+    </div>
+  </section>
+  <!-- 404 section end -->
 
 
-    <!-- all js goes here -->
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/app.js"></script>
+  <!-- all js goes here -->
+  <script src="assets/js/jquery-1.12.4.min.js"></script>
+  <script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/slick.min.js"></script>
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="assets/js/app.js"></script>
 </body>
 
 </html>
