--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
   <!-- about-us section start -->
   <section id="about" class="none">
-    
+
     <div class="container">
       <div class="row section_title">
         <h2>About us</h2>
@@ -83,16 +83,16 @@
           <div class="row">
             <div class="col-12">
               <div class="about_content_img">
-                <img src="assets/images/about/about.png" alt="img"/>
+                <img src="assets/images/about/about.png" alt="img" />
               </div>
             </div>
             <div class="col-4">
               <div class="about_content_img_1">
-                <img src="assets/images/about/about3.png" alt="img"/>
+                <img src="assets/images/about/about3.png" alt="img" />
               </div>
               <div class="play_video">
                 <a href="https://www.youtube.com/watch?v=LOzUl2KStvA" class="popup-video">
-                  <span class="play_icon"><img src="assets/images/icon.png" alt="icon"/> Play
+                  <span class="play_icon"><img src="assets/images/icon.png" alt="icon" /> Play
                     Video</span>
                 </a>
               </div>
@@ -122,7 +122,7 @@
       </div>
     </div>
     <div class="round_shape_img">
-      <img src="assets/images/Shadow.png" alt="shaddow_ibackground">
+      <img src="assets/images/shape/shadow_2.png" alt="shaddow_ibackground">
     </div>
   </section>
 
@@ -145,7 +145,7 @@
         </div>
         <div class="col-lg-6 order-lg-0 order-1 r_space">
           <div class="about_content_2_img">
-            <img src="assets/images/about/office.png" alt="office images"/>
+            <img src="assets/images/about/office.png" alt="office images" />
           </div>
         </div>
       </div>
@@ -155,6 +155,9 @@
 
   <!-- Team section start -->
   <section id="team" class="none">
+    <div class="round_shape_img">
+      <img src="assets/images/shape/shadow.png" alt="shaddow_ibackground">
+    </div>
     <div class="container">
       <div class="row section_title">
         <h2>Our Team</h2>
@@ -163,7 +166,7 @@
         <div class="col-md-6">
           <div class="team_card text-center">
             <div class="members_img">
-              <img src="assets/images/team/1.png" alt="team-members"/>
+              <img src="assets/images/team/1.png" alt="team-members" />
             </div>
             <div class="member_position">
               <h3 class="name">Jerry Vargas</h3>
@@ -174,7 +177,7 @@
         <div class="col-md-6">
           <div class="team_card text-center">
             <div class="members_img">
-              <img src="assets/images/team/2.png" alt="team-members"/>
+              <img src="assets/images/team/2.png" alt="team-members" />
             </div>
             <div class="member_position">
               <h3 class="name">Keanu Mendez</h3>
@@ -185,7 +188,7 @@
         <div class="col-md-6">
           <div class="team_card text-center">
             <div class="members_img">
-              <img src="assets/images/team/3.png" alt="team-members"/>
+              <img src="assets/images/team/3.png" alt="team-members" />
             </div>
             <div class="member_position">
               <h3 class="name">Tom Evans</h3>
@@ -196,7 +199,7 @@
         <div class="col-md-6">
           <div class="team_card text-center">
             <div class="members_img">
-              <img src="assets/images/team/4.png" alt="team-members"/>
+              <img src="assets/images/team/4.png" alt="team-members" />
             </div>
             <div class="member_position">
               <h3 class="name">Ronald Nelson</h3>
@@ -207,7 +210,7 @@
         <div class="col-md-6">
           <div class="team_card text-center">
             <div class="members_img">
-              <img src="assets/images/team/5.png" alt="team-members"/>
+              <img src="assets/images/team/5.png" alt="team-members" />
             </div>
             <div class="member_position">
               <h3 class="name">Aaron James</h3>
@@ -218,7 +221,7 @@
         <div class="col-md-6">
           <div class="team_card text-center">
             <div class="members_img">
-              <img src="assets/images/team/6.png" alt="team-members"/>
+              <img src="assets/images/team/6.png" alt="team-members" />
             </div>
             <div class="member_position">
               <h3 class="name">Alex Lee</h3>
@@ -229,7 +232,7 @@
         <div class="col-md-6">
           <div class="team_card text-center">
             <div class="members_img">
-              <img src="assets/images/team/7.png" alt="team-members"/>
+              <img src="assets/images/team/7.png" alt="team-members" />
             </div>
             <div class="member_position">
               <h3 class="name">Anthony Carrol</h3>
@@ -240,7 +243,7 @@
         <div class="col-md-6">
           <div class="team_card text-center">
             <div class="members_img">
-              <img src="assets/images/team/8.png" alt="team-members"/>
+              <img src="assets/images/team/8.png" alt="team-members" />
             </div>
             <div class="member_position">
               <h3 class="name">Chris Elliot</h3>
@@ -250,6 +253,7 @@
         </div>
       </div>
     </div>
+
   </section>
   <!-- Team section end -->
 
