--- a/contact.html
+++ b/contact.html
@@ -2,140 +2,142 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zakirsoft</title>
-    <link rel="stylesheet" href="assets/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>zakirsoft</title>
+  <link rel="stylesheet" href="assets/css/all.min.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/magnific-popup.css">
+  <link rel="stylesheet" href="assets/css/slick.css">
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
-    <!-- header section start -->
-    <header>
-        <div class="container">
-          <nav class="head_content">
-            <div class="logo">
-              <a href="index.html"> Zakir <span>Soft</span> </a>
-            </div>
-            <div class="menu">
-              <ul class="m_bar">
-                <li></li>
-                <li></li>
-              </ul>
-            </div>
-          </nav>
+  <!-- header section start -->
+  <header>
+    <div class="container">
+      <nav class="head_content">
+        <div class="logo">
+          <a href="index.html"> Zakir <span>Soft</span> </a>
         </div>
-      </header>
-    <!-- Menus -->
-    <div class="fullscreen-menu">
-        <div class="menu-body">
-            <div class="container">
-              <div class="menu-container">
-                  <div class="menu-close">
-                    <ul class="close-bar">
-                      <li></li>
-                      <li></li>
-                    </ul>
-                  </div>
-                  <div class="main-menu">
-                    <ul>
-                      <li> <a href="index.html"> <span>01</span> Home </a> </li>
-                      <li> <a href="about.html"> <span>02</span> About </a> </li>
-                      <li> <a href="work.html"> <span>03</span> Work </a> </li>
-                      <li> <a href="career.html"> <span>04</span> Career </a> </li>
-                      <li> <a href="contact.html" class="active"> <span>05</span> Contact </a> </li>
-                    </ul>
-                  </div>
-                </div>
-            </div>
+        <div class="menu">
+          <ul class="m_bar">
+            <li></li>
+            <li></li>
+          </ul>
         </div>
-        <div class="menu-footer">
-          <div class="container">
-            <ul class="footer-social">
-              <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-github"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-facebook-f"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-linkedin-in"></i> </a></li>
+      </nav>
+    </div>
+  </header>
+  <!-- Menus -->
+  <div class="fullscreen-menu">
+    <div class="menu-body">
+      <div class="container">
+        <div class="menu-container">
+          <div class="menu-close">
+            <ul class="close-bar">
+              <li></li>
+              <li></li>
             </ul>
-            <div class="copyright-text">
-              <p> &copy; 2020 - Zakirsoft </h5>
-            </div>
+          </div>
+          <div class="main-menu">
+            <ul>
+              <li> <a href="index.html"> <span>01</span> Home </a> </li>
+              <li> <a href="about.html"> <span>02</span> About </a> </li>
+              <li> <a href="work.html"> <span>03</span> Work </a> </li>
+              <li> <a href="career.html"> <span>04</span> Career </a> </li>
+              <li> <a href="contact.html" class="active"> <span>05</span> Contact </a> </li>
+            </ul>
           </div>
         </div>
+      </div>
     </div>
-    <!-- header section end -->
+    <div class="menu-footer">
+      <div class="container">
+        <ul class="footer-social">
+          <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-github"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-facebook-f"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
+          <li><a href="#"> <i class="fab fa-linkedin-in"></i> </a></li>
+        </ul>
+        <div class="copyright-text">
+          <p> &copy; 2020 - Zakirsoft </h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- header section end -->
 
-    <!-- joinus section start -->
-    <section id="joinus-contact_area" class="none">
-        <div class="container">
-            <div class="row section_title">
-                <h2>Contact us</h2>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="contact_form text-center">
-                        <form>
-                            <div class="form-row">
-                                <div class="col">
-                                    <input type="text" class="form-control" placeholder="Enter Your name" required>
-                                </div>
-                                <div class="col">
-                                    <input type="email" class="form-control" placeholder="Please enter a valid email"
-                                        required>
-                                </div>
-                            </div>
-                            <input class="subject" type="text" name="Subjects" placeholder="Subjects">
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
-                            <button class="button" type="submit">SEND MESSAGE <i class="fab fa-telegram-plane"></i></button>
-                        </form>
-                    </div>
+  <!-- joinus section start -->
+  <section id="joinus-contact_area" class="none">
+    <div class="round_shape_img">
+      <img src="assets/images/shape/shadow.png" alt="shaddow_ibackground">
+    </div>
+    <div class="container">
+      <div class="row section_title">
+        <h2>Contact us</h2>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="contact_form text-center">
+            <form>
+              <div class="form-row">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Enter Your name" required>
                 </div>
-            </div>
-        </div>
-    </section>
-    <!-- joinus section end -->
-
-    <div class="bottom text-center none">
-        <div class="container">
-            <div>
-                <ul class="social_links">
-                    <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <div class="footer_c_right text-center none">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="copyright_text">
-                        <p>&#169; 2020 - Zakirsoft</p>
-                    </div>
+                <div class="col">
+                  <input type="email" class="form-control" placeholder="Please enter a valid email" required>
                 </div>
-            </div>
+              </div>
+              <input class="subject" type="text" name="Subjects" placeholder="Subjects">
+              <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+              <button class="button" type="submit">SEND MESSAGE <i class="fab fa-telegram-plane"></i></button>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
+  </section>
+  <!-- joinus section end -->
 
-    <!-- all js goes here -->
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/app.js"></script>
+  <div class="bottom text-center none">
+    <div class="container">
+      <div>
+        <ul class="social_links">
+          <li><a href="#"><i class="fab fa-behance"></i></a></li>
+          <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+          <li><a href="#"><i class="fab fa-github"></i></a></li>
+          <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer_c_right text-center none">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="copyright_text">
+            <p>&#169; 2020 - Zakirsoft</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- all js goes here -->
+  <script src="assets/js/jquery-1.12.4.min.js"></script>
+  <script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/slick.min.js"></script>
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="assets/js/app.js"></script>
 </body>
 
 </html>
