--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
                     <div class="main-menu">
                         <ul>
                             <li> <a href="index.html"> <span>01</span> Home </a> </li>
-                            <li> <a href="about.html" > <span>02</span> About </a> </li>
+                            <li> <a href="about.html"> <span>02</span> About </a> </li>
                             <li> <a href="work.html" class="active"> <span>03</span> Work </a> </li>
                             <li> <a href="career.html"> <span>04</span> Career </a> </li>
                             <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
@@ -74,6 +74,9 @@
 
     <!-- work section start -->
     <section id="work" class="none">
+        <div class="round_shape_img">
+            <img src="assets/images/shape/shadow_4.png" alt="shaddow_ibackground">
+        </div>
         <div class="container">
             <div class="row section_title">
                 <h2>Work</h2>
