--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       </div>
 
       <div class="row project_slider">
-        <div class="slide_item col-12">
-          <div class="col-4">
+        <div class="slide_item row">
+          <div class="col-lg-4 col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -121,14 +121,14 @@
               </a>
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-lg-8 col-12 order-lg-0 order-1">
             <div class="project_img">
               <img src="assets/images/project-img/img-7.png" alt="project-img" />
             </div>
           </div>
         </div>
-        <div class="slide_item col-12">
-          <div class="col-4">
+        <div class="slide_item row">
+          <div class="col-lg-4 col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -138,14 +138,14 @@
               </a>
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-lg-8 col-12 order-lg-0 order-1">
             <div class="project_img">
               <img src="assets/images/project-img/img-7.png" alt="project-img" />
             </div>
           </div>
         </div>
-        <div class="slide_item col-12">
-          <div class="col-4">
+        <div class="slide_item row">
+          <div class="col-lg-4 col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -155,14 +155,14 @@
               </a>
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-lg-8 col-12 order-lg-0 order-1">
             <div class="project_img">
               <img src="assets/images/project-img/img-7.png" alt="project-img" />
             </div>
           </div>
         </div>
-        <div class="slide_item col-12">
-          <div class="col-4">
+        <div class="slide_item row">
+          <div class="col-lg-4 col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -172,14 +172,14 @@
               </a>
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-lg-8 col-12 order-lg-0 order-1">
             <div class="project_img">
               <img src="assets/images/project-img/img-7.png" alt="project-img" />
             </div>
           </div>
         </div>
-        <div class="slide_item col-12">
-          <div class="col-4">
+        <div class="slide_item row">
+          <div class="col-lg-4 col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -189,14 +189,14 @@
               </a>
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-lg-8 col-12 order-lg-0 order-1">
             <div class="project_img">
               <img src="assets/images/project-img/img-7.png" alt="project-img" />
             </div>
           </div>
         </div>
-        <div class="slide_item col-12">
-          <div class="col-4">
+        <div class="slide_item row">
+          <div class="col-lg-4 col-12 order-lg-0 order-2">
             <div class="slide_info">
               <span class="p_type">Project type</span>
               <h3 class="p_title">Project name</h3>
@@ -206,26 +206,9 @@
               </a>
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-lg-8 col-12 order-lg-0 order-1">
             <div class="project_img">
               <img src="assets/images/project-img/img-7.png" alt="project-img" />
-            </div>
-          </div>
-        </div>
-        <div class="slide_item col-12">
-          <div class="col-4">
-            <div class="slide_info">
-              <span class="p_type">Project type</span>
-              <h3 class="p_title">Project name</h3>
-              <a class="v_project" href="#">
-                <span>View Project</span>
-                <img src="assets/images/Arrow-icon.png" alt="project-img" />
-              </a>
-            </div>
-          </div>
-          <div class="col-8">
-            <div class="project_img">
-              <img src="assets/images/project-img/img-7.png" alt="project-img" class="img-fluid" />
             </div>
           </div>
         </div>
