--- a/404.html
+++ b/404.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>zakirsoft</title>
+  <!-- =========== Favicon ============ -->
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
+  
   <link rel="stylesheet" href="assets/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -18,7 +23,8 @@
     <div class="container">
       <nav class="head_content">
         <div class="logo">
-          <a href="index.html"> Zakir <span>Soft</span> </a>
+          <!-- <a href="index.html"> Zakir <span>Soft</span> </a> -->
+          <img src="assets/images/logo/1.png" alt="brand-log">
         </div>
         <div class="menu">
           <ul class="m_bar">
