--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>zakirsoft</title>
+  <!-- =========== Favicon ============ -->
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
+
   <link rel="stylesheet" href="assets/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -18,7 +23,7 @@
     <div class="container">
       <nav class="head_content">
         <div class="logo">
-          <a href="index.html"> Zakir <span>Soft</span> </a>
+         <img src="assets/images/logo/1.png" alt="Zakir Soft">
         </div>
         <div class="menu">
           <ul class="m_bar">
@@ -86,7 +91,7 @@
                 <img src="assets/images/about/about.png" alt="img" />
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-12 order-lg-0 order-2">
               <div class="about_content_img_1">
                 <img src="assets/images/about/about3.png" alt="img" />
               </div>
@@ -97,7 +102,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-lg-8 col-12 order-lg-0 order-1">
               <div class="about_content_img_2">
                 <img src="assets/images/about/about2.png" alt="img" class="img-fluid" />
               </div>
