--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>zakirsoft</title>
+  <!-- =========== Favicon ============ -->
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
+
   <link rel="stylesheet" href="assets/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -18,7 +23,7 @@
     <div class="container">
       <nav class="head_content">
         <div class="logo">
-          <a href="index.html"> Zakir <span>Soft</span> </a>
+       <img src="assets/images/logo/1.png" alt="logo">
         </div>
         <div class="menu">
           <ul class="m_bar">
@@ -85,10 +90,10 @@
           <div class="contact_form text-center">
             <form>
               <div class="form-row">
-                <div class="col">
+                <div class="col-md-6 col-12">
                   <input type="text" class="form-control" placeholder="Enter Your name" required>
                 </div>
-                <div class="col">
+                <div class="col-md-6 col-12">
                   <input type="email" class="form-control" placeholder="Please enter a valid email" required>
                 </div>
               </div>
