--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>zakirsoft</title>
+  <!-- =========== Favicon ============ -->
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/32x32.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="assets/images/logo/64x64.png">
+
+
   <link rel="stylesheet" href="assets/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -18,7 +24,8 @@
     <div class="container">
       <nav class="head_content">
         <div class="logo">
-          <a href="index.html"> Zakir <span>Soft</span> </a>
+          <!-- <a href="index.html"> Zakir <span>Soft</span> </a> -->
+          <img src="assets/images/logo/1.png" alt="Zakir Soft">
         </div>
         <div class="menu">
           <ul class="m_bar">
@@ -435,7 +442,7 @@
               <li class="nav_items"><a href="about.html">About</a></li>
               <li class="nav_items"><a href="work.html">work</a></li>
               <li class="nav_items"><a href="career.html">Career</a></li>
-              <li class="nav_items"><a href="join-us.html">Contact</a></li>
+              <li class="nav_items"><a href="join-us-contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="connect_info">
